# rootcause

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml
configs/: project.yaml
docs/: index.html
docs/assets/css/: style.css
docs/assets/data/: site_data.json
scripts/: build_app_artifacts.py  build_crime_measurement_validation.py  build_fbi_county_fallback.py  build_final_report.py  build_overlap_diagnostics.py  build_panel.py  build_qa_report.py  build_reverse_direction_scaffold.py  download_data.py  refresh_public_data.py  run_baseline.py  run_bidirectional_poverty_crime.py  run_border_design.py  run_dml.py  run_falsification.py  run_min_wage_identification.py  run_reverse_direction.py  run_robustness.py  run_staggered_att.py  run_support_trimmed_dml.py
src/povcrime/: __init__.py  analysis.py  config.py  source_registry.py  utils.py
tests/: conftest.py  test_analysis_registry.py  test_app_artifacts.py  test_bidirectional_runner.py  test_border.py  test_census_cbp.py  test_config.py  test_county_adjacency.py  test_coverage.py  test_dml.py  test_fbi_crime.py  test_fbi_reta_master.py  test_fhfa_hpi.py  test_final_report.py  test_geography.py  test_hud_fmr.py  test_overlap.py  test_panel.py  test_qa_report.py  test_refresh_public_data.py  test_report_contracts.py  test_reverse_direction.py  test_reverse_direction_runner.py  test_robustness.py  test_run_baseline.py  test_smoke_pipeline.py  test_source_registry.py  test_staggered_att.py  test_ukcpr_welfare.py  test_utils.py
(+61 files in other folders)
